ajuste bug overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  font-family: 'Roboto'
+  font-family: 'Roboto';
+  overflow-x: hidden;
 }
 
 .container {
